projects/compiler/test/typechecker/if/error_empty_else_block.out
Error at %FILE_NAME%:1:9
Incomplete if-else expression
  |  val a = if true 123 else { }
             ^
The else-block must contain a value
