projects/compiler/test/typechecker/if/error_empty_else_block.abra
val a = if true 123 else { }